compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__empty_case_of_multi_pattern.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub fn main(a: Result(a, b), b: Bool) {\n  case a, b {}\n}\n"
---
----- SOURCE CODE

pub fn main(a: Result(a, b), b: Bool) {
  case a, b {}
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:3:3
  │
3 │   case a, b {}
  │   ^^^^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Ok(_), _
    Error(_), _
